--- a/index.html
+++ b/index.html
@@ -303,15 +303,13 @@
       </div>
    </div>
 
-   <div class="Tours" id="Food">
+     <div class="Tours" id="Food">
       <div class="container">
          <div class="row">
             <div class="col-md-12">
                <div class="titlepage">
                   <h2>The Best Food Places</h2>
-                  <span>It is a long established fact that a reader will be distracted by the readable content of a page
-                     when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal
-                     distribution of letters,</span>
+                  <span>Walk right up to good food </span>
                </div>
             </div>
          </div>
@@ -321,27 +319,33 @@
                   <div class="owl-carousel owl-theme">
                      <div class="item">
                         <img class="img-responsive" src="images/1.jpg" alt="#" />
-                        <h3>Pune</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                           suffered alteration in soe suffk even slightly believable. If y be sure there</p>
-                     </div>
+                        <h3>Garden Vada Pav Centre</h3>
+                        <p>Garden Vada Pav was started in 1972 by Parvati located in Camp, which is where Garden Vada Pav gets its name from.</p>
+
                      <div class="item">
                         <img class="img-responsive" src="images/2.jpg" alt="#" />
-                        <h3>New York</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                           suffered alteration in soe suffk even slightly believable. If y be sure there</p>
+                        <h3>Katakirrr, Dhole Patil Road, Pune</h3>
+                        <p>They serve all types of misal, whether you want a lighter or very much spicy, you will get it all customised! Clean and small ambience with well managed staff.</p>
                      </div>
                      <div class="item">
                         <img class="img-responsive" src="images/3.jpg" alt="#" />
-                        <h3>London</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                           suffered alteration in soe suffk even slightly believable. If y be sure there</p>
+                        <h3>Vaishali , FC Road , Pune</h3>
+                        <p>Vaishali is one of the most popular restaurant among the student community of Pune, Situated on the Fergusson College Road. The ambience is youthful and price factor is also average and that is the main resaon</p>
                      </div>
                      <div class="item">
                         <img class="img-responsive" src="images/2.jpg" alt="#" />
-                        <h3>Holiday Tour</h3>
-                        <p>There are many variations of passages of Lorem Ipsum available, but the majority have
-                           suffered alteration in soe suffk even slightly believable. If y be sure there</p>
+                        <h3>Yewale Amruttulya</h3>
+                        <p>Yewale Amruttulya has around 280 branches across the country, most of which are located in the Maharashtra region.</p>
+                     </div>
+                     <div class="item">
+                        <img class="img-responsive" src="images/2.jpg" alt="#" />
+                        <h3>Sweetspot</h3>
+                        <p>Pune better knows SweetSpot for its sinful french delicacies, local flavours and our ability to satiate those sweet cravings! Finance Rd, Agarkar Nagar, Pune</p>
+                     </div>
+                     <div class="item">
+                        <img class="img-responsive" src="images/2.jpg" alt="#" />
+                        <h3>Sudamache Pohe </h3>
+                        <p>Sudamache Pohe in Kasba Peth, Pune is a top player in the category Snacks Bar in the Pune Dagdusheth Halwai Temple Road, MH SH 114, Opposite Shaniwar Wada Main Gate, Kasba Peth, Pune,</p>
                      </div>
                   </div>
                </div>
@@ -349,7 +353,6 @@
          </section>
       </div>
    </div>
-
    <div class="Tours" id="Clubs_Hotels">
       <div class="container">
          <div class="row">
