--- a/index.html
+++ b/index.html
@@ -102,9 +102,7 @@
             <div class="col-md-12 ">
                <div class="titlepage">
                   <h2>About Pune</h2>
-                  <span> Pune is a city of greenery and culture. There are many good colleges in Pune. It also has a
-                     unique village culture, which you will miss if you visit other cities in India. If you want to get
-                     an insight into modern India, Pune must be on your list.</span>
+                  <span> Pune is a city of greenery and culture. There are many good colleges in Pune. It also has a unique village culture, which you will miss if you visit other cities in India. If you want to get an insight into modern India, Pune must be on your list.</span>
                </div>
             </div>
          </div>
@@ -114,14 +112,9 @@
             <div class="row">
                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                   <div class="about-box">
-                     <p> <span>Pune is a city located in the state of Maharashtra. Previously known as Poona, it is a
-                           city situated at the junction of Mutha and Mula rivers. It is also given the name – “Queen of
-                           the Deccan”. It is considered as a capital of culture for the people of Maratha.
+                     <p> <span>Pune is a city located in the state of Maharashtra. Previously known as Poona, it is a city situated at the junction of Mutha and Mula rivers. It is also given the name – “Queen of the Deccan”. It is considered as a capital of culture for the people of Maratha.
 
-                           This city gained recognition in the early 17th century as the capital of Bhonsle Marathas.
-                           Mughals occupied this city for some time, but it was acquired back by Marathas and thus
-                           remained capital for Marathas till 1817. Now, it has become a famous tourist resort which
-                           offers cold weather along with various parks, hotels, religious monuments etc.</span></p>
+                           This city gained recognition in the early 17th century as the capital of Bhonsle Marathas. Mughals occupied this city for some time, but it was acquired back by Marathas and thus remained capital for Marathas till 1817. Now, it has become a famous tourist resort which offers cold weather along with various parks, hotels, religious monuments etc.</span></p>
                   </div>
                </div>
             </div>
@@ -137,8 +130,7 @@
             <div class="col-md-12 ">
                <div class="titlepage">
                   <h2>Places You Must Visit in Pune</h2>
-                  <span>See most popular places to visit in Pune, top things to do,famous hotels and street food,Clubs
-                     ans top Infrastructure Shopping ans Nightlife in Pune, find various attraction in Pune.</span>
+                  <span>See most popular places to visit in Pune, top things to do,famous hotels and street food,Clubs and top Infrastructure Shopping and Nightlife in Pune, find various attraction in Pune.</span>
                </div>
             </div>
          </div>
@@ -147,7 +139,7 @@
                <div class="traveling-box">
                   <i><img src="icon/map.png" alt="icon" /></i>
                   <h3>Tourist Places</h3>
-                  <p> going to use a passage of Lorem Ipsum, you need to be </p>
+                  <p> "One life. One world. Explore it." </p>
                   <div class="read-more">
                      <a href="#Tourist">Read More</a>
                   </div>
@@ -157,7 +149,7 @@
                <div class="traveling-box">
                   <i><img src="icon/table.png" alt="icon" /></i>
                   <h3>Food & Drinks</h3>
-                  <p> going to use a passage of Lorem Ipsum, you need to be </p>
+                  <p> "Where every flavor tells a story." </p>
                   <div class="read-more">
                      <a href="#Food">Read More</a>
                   </div>
@@ -167,7 +159,7 @@
                <div class="traveling-box">
                   <i><img src="icon/night-club.png" alt="icon" /></i>
                   <h3>Hotels & Clubs</h3>
-                  <p> going to use a passage of Lorem Ipsum, you need to be </p>
+                  <p> "Redefining what hospitality looks like in the modern world" </p>
                   <div class="read-more">
                      <a href="#Clubs_Hotels">Read More</a>
                   </div>
@@ -186,8 +178,8 @@
             <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12">
                <div class="traveling-box">
                   <i><img src="icon/bridge.png" alt="icon" /></i>
-                  <h3>Infrastructure</h3>
-                  <p> going to use a passage of Lorem Ipsum, you need to be </p>
+                  <h3>Mall and Sectors</h3>
+                  <p>Assets put money in your pocket and liabilities take money out from your pocket</p> 
                   <div class="read-more">
                      <a href="#Infrastructure">Read More</a>
                   </div>
@@ -207,7 +199,7 @@
                   <span>While Pune is known to be one of the best cities to live in India, there is a lot more that
                      Maharashtra has to offer. There are many places to visit near Pune, which also serve as excellent
                      weekend getaways from Pune. From quaint hill stations, picnic spots, cultural towns and temples to
-                     even historical monuments - whatever you fancy, you will find it. What makes a short trip or a
+                     even historical monuments - whatever facinates you, you will find it. What makes a short trip or a
                      weekend escape better is the excellent road and railway connectivity.</span>
                </div>
             </div>
@@ -227,10 +219,8 @@
             <div class="col-md-12">
                <div class="titlepage">
                   <h2>Tourist Places</h2>
-                  <span>It is a long established fact that a reader will be distracted
-                     by the readable content of a page when looking at its layout.
-                     The point of using Lorem Ipsum is that it has a more-or-less
-                     normal distribution of letters,</span>
+                  <span>Only going places that spark joy Life is short and the world is wide, better get started. Adventure is worthwhile in itself. Get lost in heaven. Pune is always a good idea.
+                   <br>  What's on your bucket list?,</span>
                </div>
             </div>
          </div>
@@ -243,7 +233,7 @@
                         <h3>Shaniwar Wada</h3>
                         <p>
                            Shaniwarwada, once the seat of the Peshwa governance in Pune
-                           is a 286-year-old mansion and is one of the finest examples
+                           is a 286-year-old mandion and is one of the finest examples
                            of architecture in the city.
                         </p>
                      </div>
@@ -310,7 +300,7 @@
                         <img class="img-responsive" src="images/sinhagad-fort-pune-tourism-entry-fee-timings-holidays-reviews-header.jpg" alt="#" />
                         <h3>Sinhgad Fort</h3>
                         <p>
-                           Sinhagad means Lion’s Fort, and it is on a hill among the
+                           Sinhagad meand Lion’s Fort, and it is on a hill among the
                            Sahyadri Mountains. Parts of this magnificent fort are in
                            ruins, but the fort still attracts many adventure
                            enthusiasts. It’s known for its historical importance and
@@ -335,17 +325,22 @@
                         <p>
                            Tribal communities have always been fascinating, and this museum is a great place to get to
                            know these elusive people, which otherwise is not possible. The place houses a wonderful
-                           collection of artefacts belonging to over 47 tribes of Maharashtra. You will see their
+                           collection of artifacts belonging to over 47 tribes of Maharashtra. You will see their
                            jewelry, photographs, weapons, hunting tools, and musical instruments.
                         </p>
                      </div>
                      <div class="item">
-                        <img class="img-responsive" src="images/map.png" alt="#" />
-                        <h3>More Tourist Spots</h3>
+                        <img class="img-responsive" src="images/Pawna-Lake-Lonavala-NishantAChavan-wikimedia.jpg" alt="#" />
+                        <h3>Pawna Lake</h3>
                         <p>
-                           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum distinctio possimus
-                           laudantium corporis omnis hic fugit atque fuga a! Adipisci dolor ducimus esse facilis cum
-                           numquam, repellat distinctio eum voluptas!
+                           Pawna Lake is an artificial reservoir formed by water of its namesake dam. Situated towards the outskirts of Lonavala, this lake is a popular picnic and leisure spot. Rich verdure encompasses this lake, making it a delight for those who want to spend time in the lap of nature
+                        </p>
+                     </div>
+                     <div class="item">
+                        <img class="img-responsive" src="images/dev kund water fall.jpg" alt="#" />
+                        <h3>Devkund Waterfall</h3>
+                        <p>
+                           Devkund Waterfall is one of the most beautiful waterfalls in India. Witness the amalgamation of three waterfalls, where you can witness the origin of the Kundalika River after trekking for 3 hours. Witness the beauty of the forests around the waterfall, and complete the trek with an experienced trek leader. 
                         </p>
                      </div>
 
@@ -362,10 +357,7 @@
             <div class="col-md-12">
                <div class="titlepage">
                   <h2>Clubs and Hotels</h2>
-                  <span>It is a long established fact that a reader will be distracted
-                     by the readable content of a page when looking at its layout.
-                     The point of using Lorem Ipsum is that it has a more-or-less
-                     normal distribution of letters,</span>
+                  <span>Live like tomorrow doesn't exist, Bring on the night. Hotels are happy place.The perfect blend of luxury and relaxation. Vacationing in style </span>
                </div>
             </div>
          </div>
@@ -484,7 +476,7 @@
                      </div>
                      <div class="item">
                         <img class="img-responsive" src="images/Katakirr Misal.jpeg" alt="#" />
-                        <h3>Katakirrr, Dhole Patil Road, Pune</h3>
+                        <h3>Katakirrr Misal, Pune</h3>
                         <p>
                            They serve all types of misal, whether you want a lighter or
                            very much spicy, you will get it all customised! Clean and
@@ -508,6 +500,20 @@
                            Yewale Amruttulya has around 280 branches across the
                            country, most of which are located in the Maharashtra
                            region.
+                        </p>
+                     </div>
+                     <div class="item">
+                        <img class="img-responsive" src="images/kakahalwai.jpg" alt="#" />
+                        <h3>Kaka Halwai</h3>
+                        <p>
+                           Kaka Halwai, Pune is a top player in the category Sweet Shops in the Pune.Sweet Shops, Dry Fruit Retailers, Dry Fruit Sweet Retailers, Bengali Sweet Retailers, Banana Chips Retailers, Rajasthani Sweet Retailers, Chiwda Manufacturers, Banana Wafer Manufacturers.
+                        </p>
+                     </div>
+                     <div class="item">
+                        <img class="img-responsive" src="images/the momo panda.jpg" alt="#" />
+                        <h3>The Momo panda</h3>
+                        <p>
+                           The Momo Panda is an F&B-QSR Indian outlet that offers a wide variety of delicious and healthy food options. It has a wide range of dishes from North Indian to South Indian, Chinese, and Continental cuisines. The food is freshly prepared and served with great care and attention to detail. 
                         </p>
                      </div>
                      <div class="item">
@@ -540,11 +546,11 @@
                            Peth, Pune,
                         </p>
                      </div>
-                     <div class="item">
+                     <!-- <div class="item">
                         <img class="img-responsive" src="images/table.png" alt="#" />
                         <h3>More Places</h3>
                         <p>Pune,</p>
-                     </div>
+                     </div> -->
                   </div>
                </div>
             </div>
@@ -558,8 +564,7 @@
             <div class="col-md-12">
                <div class="titlepage">
                   <h2>Religious Places</h2>
-                  <span>Walk right up to good food <br />The good taste of food. Fine
-                     dine and wine. Good time, Great taste. An oasis of pleasure
+                  <span>The more we study religions the more we are convinced that man never worshipped anything but himself. Prayer does not change God, but it changes him who prays.
                   </span>
                </div>
             </div>
@@ -651,10 +656,7 @@
             <div class="col-md-12">
                <div class="titlepage">
                   <h2>Malls & Sectors</h2>
-                  <span>It is a long established fact that a reader will be distracted
-                     by the readable content of a page when looking at its layout.
-                     The point of using Lorem Ipsum is that it has a more-or-less
-                     normal distribution of letters,</span>
+                  <span>Constructed with intricate, opulent infrastructure and detailed interiors, malls are world in its own if you have genius, industry will improve it.If you have none, industry will supply it's place</span>
                </div>
             </div>
          </div>
