--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                   <h3>Mall and Sectors</h3>
                   <p>Assets put money in your pocket and liabilities take money out from your pocket</p> 
                   <div class="read-more">
-                     <a href="#Infrastructure">Read More</a>
+                     <a href="#Infra">Read More</a>
                   </div>
                </div>
             </div>
